--- a/src/elt.ipynb
+++ b/src/elt.ipynb
@@ -19,16 +19,7 @@
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6c030b6d-27f3-46b9-9aef-fc4f133ce7f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "load_dotenv()\n",
     "import openai\n",
     "import os"
    ]
